--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -289,6 +289,7 @@
           <div class="card-reveal black-text">
             <span class="card-title grey-text text-darken-4">Escribenos <i class="fa fa-pencil right" aria-hidden="true"></i></span>
             <form class="col s12" method="POST">
+              {% csrf_token %}
               <div class="row">
                 <div class="input-field col s12">
                   <textarea id="mensaje" name="mensaje" class="materialize-textarea"></textarea>
